pkg/lang/syntax/testdata/ub/validate/invalid/factory/resource-lock-expression.ub
factory: {
  imports: { core: 'example.com/core' }
  inputs: { name: { type: string } }
  resources: {
    app: core.thing { @lock: input.name }
  }
}
